A lot of changes primarily about exception handling logic!